# learn-chinese

./: .gitignore  .stylelintrc.js  Readme.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  init-firewall.sh
.github/actions/cluster-setup/: action.yml
.github/actions/env-setup/: action.yml
.github/actions/repo-metadata/: action.yml
.github/workflows/: pr-commit.yml  pr-merge-main.yml  pr-merge-prod.yml
backend/: Cargo.toml  run-docker.sh
backend/api-test-helper/: .env  Dockerfile.dev  Readme.md  requests.http
backend/db-app/: Cargo.toml  Dockerfile.dev
backend/db-app/migrations/: 202501211500_tts_cache.sql
backend/db-app/src/: db_setup.rs  util.rs
backend/db-app/src/seeds/: mod.rs  s010_users.rs
backend/learn-api/: .env  Cargo.toml  Dockerfile  Dockerfile.dev  README.md
backend/learn-api/src/: api_context.rs  config.rs  main.rs
backend/learn-api/src/app/: app_router.rs  helpers.rs  mod.rs
backend/learn-api/src/app/auth/: confirm_email.rs  login_user.rs  reset_password.rs  update_password.rs
backend/learn-api/src/app/tts/: get_tts.rs  mod.rs
backend/learn-api/src/app/user/: register_user.rs  update_user.rs
backend/learn-api/src/db/: app_repo.rs  mod.rs  tts_cache_repo.rs  user_repo.rs
backend/lib-api/: Cargo.toml
backend/lib-api/src/clients/: azure_tts_client.rs  mod.rs  openai_tts_client.rs  s3_client.rs  vieneu_tts_client.rs
backend/lib-api/src/util/: json_extractor.rs
backend/lib-types/: Cargo.toml
backend/lib-types/src/dto/: mod.rs  tts.rs
backend/lib-types/src/entity/: mod.rs  tts_cache_entity.rs
backend/lib-types/src/shared/: api_error.rs  mod.rs
docs/: ADD_ENV.md  K3D_SETUP.md  TTS.md
tools/: skaffold.api.yaml  skaffold.db.yaml
tools/k8s/ci/: Readme.md  build-all.sh  cluster-config.yaml
tools/k8s/ci/api/: api-test-helper.k8s-config.yaml  api-test-helper.k8s-deployment.yaml  api-test-helper.k8s-service.yaml  api.k8s-config.yaml  api.k8s-deployment.yaml  api.k8s-service.yaml
tools/k8s/ci/db/: volume.yaml
tools/k8s/dev/api/: api-test-helper.k8s-config.yaml  api-test-helper.k8s-deployment.yaml  api-test-helper.k8s-service.yaml  api.k8s-config.yaml  api.k8s-deployment.yaml  api.k8s-ingress.yaml  api.k8s-service.yaml
tools/scripts/: character-info.ts  skaffold-dev.sh  tsconfig.json
tools/scripts/tts/: README.md  config.env.example  dump-phrases.mjs  lib.sh  restore-cache.sh  start-breezyvoice.sh  status.sh  warm-phrases.sh
web/api-test/: package.json  vite.config.mts
web/api-test/test/: test.config.ts
web/api-test/test/auth/: login-user.spec.ts  update-password.spec.ts
web/api-test/test/helpers/: app-reset.ts  test.ts  util-fetch-api.ts
web/api-test/test/tts/: get-tts.spec.ts
web/api-test/test/user/: list-users.spec.ts
web/frontend/: .env.development  .env.production  index.html  package.json  tsconfig-base-aliases.ts  tsconfig.json  vite.config.ts
web/frontend/src/: App.vue  i18n.ts  router.ts  vite-env.d.ts
web/frontend/src/components/nav/: AppFooter.vue
web/frontend/src/components/svg/: Sound.vue  index.ts
web/frontend/src/components/widgets/: Checkbox.vue  PageNav.vue  ToolBubble.vue  ZhuyinKeyboard.vue  index.ts
web/frontend/src/features/: index.ts
web/frontend/src/features/auth/: confirm-email.ts
web/frontend/src/store/: misc-store.ts  store.ts  vocab-store.ts  zhuyin-store.ts  zhuyin-typing-store.ts
web/frontend/src/theme/css/: app.postcss  defines.postcss
web/frontend/src/types/: index.ts
web/frontend/src/views/: HomePage.vue  TermsPage.vue
web/learn-chinese/: .env.production  README.md  index.html  package.json  vite.config.ts
web/learn-chinese/src/: i18n.ts  index.ts  router.ts  routes.ts
web/learn-chinese/src/api/: root-api.ts  tts.ts
web/learn-chinese/src/features/: index.ts
web/learn-chinese/src/store/: index.ts  misc-store.ts  store.ts  vocab-store.ts  zhuyin-store.ts  zhuyin-typing-store.ts
web/learn-chinese/src/types/: index.ts
web/learn-chinese/src/views/: HomePage.vue  PhrasesPage.vue  PrivacyPage.vue  TermsPage.vue  UnitLessonPage.vue  VocabPage.vue  VocabQuizPage.vue  ZhuyinLearnPage.vue  ZhuyinPage.vue  ZhuyinQuizPage.vue  ZhuyinTypingPage.vue
web/learn-vietnamese/: package.json
web/learn-vietnamese/src/: index.ts  routes.ts
web/learn-vietnamese/src/api/: tts.ts
web/learn-vietnamese/src/data/: segments.ts  vocab.ts
web/learn-vietnamese/src/store/: index.ts  store.ts  vocab-store.ts
web/learn-vietnamese/src/types/: index.ts
web/learn-vietnamese/src/util/: segment-quiz.ts  tts.ts
web/learn-vietnamese/src/views/: HomePage.vue  SegmentLessonPage.vue  VocabQuizPage.vue
(+122 files in other folders)
