[workspace]

members = [
    "learn-api",
    "db-app",
    "api-test-helper",
    "lib-api",
    "lib-types",
]

[workspace.dependencies]
lib-api = { path = "./lib-api" }
lib-types = { path = "./lib-types" }
db-app = { path = "./db-app" }
aes = "0.8.4"
argon2 = "0.5.3"
async-trait = "0.1.85"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
axum-macros = "0.5.0"
bigdecimal = { version = "0.4.7", features = ["serde"] }
cbc = { version = "0.1.2", features = ["std"] }
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.27", features = ["derive", "env"] }
const_format = "0.2.34"
futures-util = { version = "0.3.31" }
lazy_static = "1.5.0"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_path_to_error = "0.1.16"
serde_qs = "0.13.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "chrono"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.11"
tokio = "1.43.0"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
tracing-bunyan-formatter = { default-features = false, version = "0.3.10" }
uuid = { version = "1.12.1", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.11.1"
rusty-s3 = "0.7.0"
tower = "0.5.2"
tracing-core = "0.1.33"
nu-ansi-term = "0.50.1"
file-rotate = "0.7.6"
urlencoding = "2.1.3"
dotenvy = "0.15.7"

[profile.dev]
opt-level = "z"
strip = true
