[workspace]
resolver = "2"

members = [
    "learn-api",
    "db-app",
    "api-test-helper",
    "lib-api",
    "lib-types",
]

[workspace.dependencies]
lib-api = { path = "./lib-api" }
lib-types = { path = "./lib-types" }
db-app = { path = "./db-app" }
aes = "0.8.4"
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.8"
axum-extra = { version = "0.10.3", features = ["typed-header"] }
axum-macros = "0.5.0"
bigdecimal = { version = "0.4.10", features = ["serde"] }
cbc = { version = "0.1.2", features = ["std"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive", "env"] }
const_format = "0.2.35"
dotenvy = "0.15.7"
file-rotate = "0.8.0"
futures-util = { version = "0.3.31" }
lazy_static = "1.5.0"
jsonwebtoken = "9.3.1"
nu-ansi-term = "0.50.1"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.14", default-features = false, features = ["json", "rustls-tls"] }
rusty-s3 = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
serde_qs = "0.14.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "any", "postgres", "migrate", "chrono", "bigdecimal", "time", "uuid"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.8", features = ["trace", "cors", "fs"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-bunyan-formatter = { default-features = false, version = "0.3.10" }
tracing-core = "0.1.36"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[profile.dev]
opt-level = "z"
strip = true
